--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "server"]
-	path = "server"
-	url = git@github.com/LiHRaM/server.git
+	path = server
+	url = git@github.com:LiHRaM/server.git
