--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ allprojects {
         maven {
             url "https://oss.sonatype.org/content/repositories/snapshots"
         }
+        flatDir {
+            dirs "$rootDir/server"
+        }
     }
 }
 
