--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':vector'
+include ':vector', ':server'
 
 // uncomment theses lines to compile matrix SDK as project sources instead of external lib
 // see build.gradle section Matrix SDK management
