changing = true doesn't work

--- a/vector/build.gradle
+++ b/vector/build.gradle
@@ -284,7 +284,7 @@ dependencies {
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-    implementation project(path: ':server') { changing = true }
+    implementation project(path: ':server')
 }
 
 //Ensure we never move past okhttp 3.12.x
